--- a/shippable.yml
+++ b/shippable.yml
@@ -27,7 +27,7 @@ build:
     - ps -eax
     - ls -al
     
-  cache: true
+  #cache: true
 
   #post_ci:
    # - docker push shippabledocker/shiphitchcock1_sample_node
