--- a/shippable.yml
+++ b/shippable.yml
@@ -15,21 +15,24 @@ env:
 build:
   cache: true
   
-  pre_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_node .
+  cache_dir_list: 
+    - $SHIPPABLE_BUILD_DIR/shippable.yml
+  
+ # pre_ci:
+  #  - docker build -t=shippabledocker/shiphitchcock1_sample_node .
 
   pre_ci_boot:
-    image_name: shippabledocker/shiphitchcock1_sample_node
-    image_tag: latest
-    pull: false
-    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+    image_name: drydock/u12nod
+    image_tag: prod
+    pull: true
+   # options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
     - ps -eax
     - ls -al
 
-  post_ci:
-    - docker push shippabledocker/shiphitchcock1_sample_node
+  #post_ci:
+   # - docker push shippabledocker/shiphitchcock1_sample_node
 
 integrations:
   hub:
