--- a/shippable.yml
+++ b/shippable.yml
@@ -13,10 +13,10 @@ env:
     - M1=ONE
 
 build:
-  cache: true
+ # cache: true
   
-  cache_dir_list: 
-    - $SHIPPABLE_BUILD_DIR/shippable.yml
+  #cache_dir_list: 
+   # - $SHIPPABLE_BUILD_DIR/shippable.yml
   
  # pre_ci:
   #  - docker build -t=shippabledocker/shiphitchcock1_sample_node .
