--- a/shippable.yml
+++ b/shippable.yml
@@ -23,8 +23,8 @@ build:
   #  - docker build -t=shippabledocker/shiphitchcock1_sample_node .
 
   pre_ci_boot:
-    image_name: drydock/u12nod
-    image_tag: prod
+    image_name: shippable/minv2
+    image_tag: latest
     pull: true
    # options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
