--- a/shippable.yml
+++ b/shippable.yml
@@ -27,8 +27,8 @@ build:
     - ps -eax
     - ls -al
 
-  post_ci:
-    - docker push shippabledocker/shiphitchcock1_sample_node
+ # post_ci:
+  #  - docker push shippabledocker/shiphitchcock1_sample_node
     
   cache: true
 
