--- a/shippable.yml
+++ b/shippable.yml
@@ -19,7 +19,7 @@ build:
    # - docker build -t=shippabledocker/shiphitchcock1_sample_node .
 
   pre_ci_boot:
-    image_name: drydock/u12nodpls
+    image_name: drydock/u14nodall
     image_tag: prod
     pull: true
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
