--- a/shippable.yml
+++ b/shippable.yml
@@ -13,6 +13,12 @@ env:
 
   matrix:
     - M1=ONE
+    
+matrix:
+  include:
+    - node_js: "5.0"
+      env:
+        - key1=aaa
 
 build:
   cache: true
