--- a/shippable.yml
+++ b/shippable.yml
@@ -18,18 +18,18 @@ build:
   cache_dir_list: 
     - $SHIPPABLE_BUILD_DIR/shippable.yml
   
-  pre_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_node .
+  # pre_ci:
+  #   - docker build -t=shippabledocker/shiphitchcock1_sample_node .
 
-  pre_ci_boot:
-    image_name: shippabledocker/shiphitchcock1_sample_node
-    image_tag: latest
-    pull: false
-    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+  # pre_ci_boot:
+  #   image_name: shippabledocker/shiphitchcock1_sample_node
+  #   image_tag: latest
+  #   pull: false
+  #   options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
-  ci:
-    - ps -eax
-    - ls -al
+  # ci:
+  #   - ps -eax
+  #   - ls -al
 
-  post_ci:
-    - docker push shippabledocker/shiphitchcock1_sample_node
+  # post_ci:
+  #   - docker push shippabledocker/shiphitchcock1_sample_node
