--- a/shippable.yml
+++ b/shippable.yml
@@ -15,8 +15,8 @@ env:
 build:
   cache: true
   
-  cache_dir_list: 
-    - $SHIPPABLE_BUILD_DIR/shippable.yml
+  # cache_dir_list: 
+  #   - $SHIPPABLE_BUILD_DIR/shippable.yml
   
   # pre_ci:
   #   - docker build -t=shippabledocker/shiphitchcock1_sample_node .
